--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -21,15 +21,27 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt pyinstaller
+          pip install -r requirements.txt pyinstaller pyinstaller-hooks-contrib
 
       - name: Build standalone EXE
         run: |
-          pyinstaller --onefile --name deepseek-bot --add-data "config.py;." main.py
+          pyinstaller \
+            --onefile \
+            --name deepseek-bot \
+            --add-data=config.py;. \
+            --collect-all=openai \
+            --collect-all=discord \
+            --collect-all=sentence_transformers \
+            --collect-all=torch \
+            --collect-all=rich \
+            main.py
+          REM Move the editable config next to the EXE
+          copy config.py dist\
 
-      - name: Upload EXE artifact
+      - name: Upload EXE + config
         uses: actions/upload-artifact@v4
         with:
-          name: deepseek-windows-exe
-          path: dist\deepseek-bot.exe
-
+          name: deepseek-windows-release
+          path: |
+            dist\deepseek-bot.exe
+            dist\config.py
