Fix build step shell so pyinstaller parses correctly

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,29 +1,12 @@
-name: Build Windows EXE
-
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
-
 jobs:
   build-windows:
     runs-on: windows-latest
 
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.12
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt pyinstaller pyinstaller-hooks-contrib
+      # …
 
       - name: Build standalone EXE
+        shell: bash
         run: |
           pyinstaller \
             --onefile \
@@ -35,13 +18,3 @@ jobs:
             --collect-all=torch \
             --collect-all=rich \
             main.py
-          REM Move the editable config next to the EXE
-          copy config.py dist\
-
-      - name: Upload EXE + config
-        uses: actions/upload-artifact@v4
-        with:
-          name: deepseek-windows-release
-          path: |
-            dist\deepseek-bot.exe
-            dist\config.py
