--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,20 +1,9 @@
-jobs:
-  build-windows:
-    runs-on: windows-latest
-
-    steps:
-      # …
-
       - name: Build standalone EXE
-        shell: bash
         run: |
-          pyinstaller \
-            --onefile \
-            --name deepseek-bot \
-            --add-data=config.py;. \
-            --collect-all=openai \
-            --collect-all=discord \
-            --collect-all=sentence_transformers \
-            --collect-all=torch \
-            --collect-all=rich \
+          pyinstaller --onefile --name deepseek-bot --add-data=config.py;. `
+            --collect-all openai `
+            --collect-all discord `
+            --collect-all sentence_transformers `
+            --collect-all torch `
+            --collect-all rich `
             main.py
